--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,18 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <properties>
         <spring.version>4.1.6.RELEASE</spring.version>
         <junit.version>4.11</junit.version>
+        <servlet-api.version>3.0.1</servlet-api.version>
     </properties>
 
 </project>
