--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,30 @@
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
     </dependencies>
 
     <properties>
         <spring.version>4.1.6.RELEASE</spring.version>
         <junit.version>4.11</junit.version>
         <servlet-api.version>3.0.1</servlet-api.version>
+        <logback.version>1.1.2</logback.version>
+        <slf4j.version>1.7.8</slf4j.version>
     </properties>
 
 </project>
