--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,22 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
+        <java.version>1.8</java.version>
         <spring.version>4.1.6.RELEASE</spring.version>
         <junit.version>4.11</junit.version>
         <servlet-api.version>3.0.1</servlet-api.version>
