--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>jcl-over-slf4j</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -75,6 +81,7 @@
         <servlet-api.version>3.0.1</servlet-api.version>
         <logback.version>1.1.2</logback.version>
         <slf4j.version>1.7.8</slf4j.version>
+        <h2.version>1.4.187</h2.version>
     </properties>
 
 </project>
