--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,18 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -77,6 +87,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring.version>4.1.6.RELEASE</spring.version>
+        <aspectj.version>1.8.5</aspectj.version>
         <junit.version>4.11</junit.version>
         <servlet-api.version>3.0.1</servlet-api.version>
         <logback.version>1.1.2</logback.version>
